--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -18,13 +18,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.kami.wificharts.MainActivity"
+            android:name="com.kami.wificharts.EnterActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+         <activity
+            android:name="com.kami.wificharts.MainActivity"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
